--- a/larq-toy/MNIST .ipynb
+++ b/larq-toy/MNIST .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,14 @@
       "Epoch 2/6\n",
       "938/938 [==============================] - 28s 30ms/step - loss: 0.4736 - accuracy: 0.9622\n",
       "Epoch 3/6\n",
-      "847/938 [==========================>...] - ETA: 2s - loss: 0.4490 - accuracy: 0.9688"
+      "938/938 [==============================] - 28s 30ms/step - loss: 0.4481 - accuracy: 0.9690\n",
+      "Epoch 4/6\n",
+      "938/938 [==============================] - 28s 29ms/step - loss: 0.4356 - accuracy: 0.9731\n",
+      "Epoch 5/6\n",
+      "938/938 [==============================] - 28s 29ms/step - loss: 0.4291 - accuracy: 0.9755\n",
+      "Epoch 6/6\n",
+      "938/938 [==============================] - 31s 33ms/step - loss: 0.4248 - accuracy: 0.9770\n",
+      "313/313 [==============================] - 2s 6ms/step - loss: 0.4460 - accuracy: 0.9699\n"
      ]
     }
    ],
@@ -141,11 +148,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy 96.99 %\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Test accuracy {test_acc * 100:.2f} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/tensorflow/python/ops/resource_variable_ops.py:1817: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n",
+      "INFO:tensorflow:Assets written to: /var/folders/3x/f8xkz0ld28s8ty74_v94rnp40000gn/T/tmpmfqquklo/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert our Keras model to a TFLite flatbuffer file\n",
+    "with open(\"./tflite-models/mnist.tflite\", \"wb\") as flatbuffer_file:\n",
+    "    flatbuffer_bytes = lce.convert_keras_model(model)\n",
+    "    flatbuffer_file.write(flatbuffer_bytes)"
    ]
   },
   {
@@ -153,12 +191,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Convert our Keras model to a TFLite flatbuffer file\n",
-    "with open(\"mnist.tflite\", \"wb\") as flatbuffer_file:\n",
-    "    flatbuffer_bytes = lce.convert_keras_model(model)\n",
-    "    flatbuffer_file.write(flatbuffer_bytes)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
