--- a/larq-toy/MNIST .ipynb
+++ b/larq-toy/MNIST .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +182,141 @@
    "source": [
     "# Convert our Keras model to a TFLite flatbuffer file\n",
     "with open(\"./tflite-models/mnist.tflite\", \"wb\") as flatbuffer_file:\n",
+    "    flatbuffer_bytes = lce.convert_keras_model(model)\n",
+    "    flatbuffer_file.write(flatbuffer_bytes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Repeat experiments but with neural networks that have all continuous precision layers. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential()\n",
+    "\n",
+    "# In the first layer we only quantize the weights and not the input\n",
+    "model.add(lq.layers.QuantConv2D(32, (3, 3),\n",
+    "                                use_bias=False,\n",
+    "                                input_shape=(28, 28, 1)))\n",
+    "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
+    "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+    "\n",
+    "model.add(lq.layers.QuantConv2D(64, (3, 3), use_bias=False))\n",
+    "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
+    "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+    "\n",
+    "model.add(lq.layers.QuantConv2D(64, (3, 3), use_bias=False))\n",
+    "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+    "model.add(tf.keras.layers.Flatten())\n",
+    "\n",
+    "model.add(lq.layers.QuantDense(64, use_bias=False))\n",
+    "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+    "model.add(lq.layers.QuantDense(10, use_bias=False))\n",
+    "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+    "model.add(tf.keras.layers.Activation(\"softmax\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+sequential_3 stats--------------------------------------------------------------------+\n",
+      "| Layer                   Input prec.           Outputs  # 32-bit  Memory  32-bit MACs |\n",
+      "|                               (bit)                         x 1    (kB)              |\n",
+      "+--------------------------------------------------------------------------------------+\n",
+      "| quant_conv2d_9                    -  (-1, 26, 26, 32)       288    1.12       194688 |\n",
+      "| max_pooling2d_6                   -  (-1, 13, 13, 32)         0       0            0 |\n",
+      "| batch_normalization_14            -  (-1, 13, 13, 32)        64    0.25            0 |\n",
+      "| quant_conv2d_10                   -  (-1, 11, 11, 64)     18432   72.00      2230272 |\n",
+      "| max_pooling2d_7                   -    (-1, 5, 5, 64)         0       0            0 |\n",
+      "| batch_normalization_15            -    (-1, 5, 5, 64)       128    0.50            0 |\n",
+      "| quant_conv2d_11                   -    (-1, 3, 3, 64)     36864  144.00       331776 |\n",
+      "| batch_normalization_16            -    (-1, 3, 3, 64)       128    0.50            0 |\n",
+      "| flatten_3                         -         (-1, 576)         0       0            0 |\n",
+      "| quant_dense_5                     -          (-1, 64)     36864  144.00        36864 |\n",
+      "| batch_normalization_17            -          (-1, 64)       128    0.50            0 |\n",
+      "| quant_dense_6                     -          (-1, 10)       640    2.50          640 |\n",
+      "| batch_normalization_18            -          (-1, 10)        20    0.08            0 |\n",
+      "| activation_2                      -          (-1, 10)         0       0            ? |\n",
+      "+--------------------------------------------------------------------------------------+\n",
+      "| Total                                                     93556  365.45      2794240 |\n",
+      "+--------------------------------------------------------------------------------------+\n",
+      "+sequential_3 summary-----------------------+\n",
+      "| Total params                   93.6 k     |\n",
+      "| Trainable params               93.1 k     |\n",
+      "| Non-trainable params           468        |\n",
+      "| Model size                     365.45 KiB |\n",
+      "| Model size (8-bit FP weights)  91.36 KiB  |\n",
+      "| Float-32 Equivalent            365.45 KiB |\n",
+      "| Compression Ratio of Memory    1.00       |\n",
+      "| Number of MACs                 2.79 M     |\n",
+      "+-------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "lq.models.summary(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/6\n",
+      "938/938 [==============================] - 26s 27ms/step - loss: 0.5609 - accuracy: 0.9551\n",
+      "Epoch 2/6\n",
+      "938/938 [==============================] - 27s 28ms/step - loss: 0.4871 - accuracy: 0.9743\n",
+      "Epoch 3/6\n",
+      "938/938 [==============================] - 26s 28ms/step - loss: 0.4706 - accuracy: 0.9792\n",
+      "Epoch 4/6\n",
+      "478/938 [==============>...............] - ETA: 13s - loss: 0.4633 - accuracy: 0.9808"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(train_images, train_labels, batch_size=64, epochs=6)\n",
+    "\n",
+    "test_loss, test_acc = model.evaluate(test_images, test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Test accuracy {test_acc * 100:.2f} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert our Keras model to a TFLite flatbuffer file\n",
+    "with open(\"./tflite-models/mnist_full_precision.tflite\", \"wb\") as flatbuffer_file:\n",
     "    flatbuffer_bytes = lce.convert_keras_model(model)\n",
     "    flatbuffer_file.write(flatbuffer_bytes)"
    ]
